--- a/Course/MainWindow.xaml
+++ b/Course/MainWindow.xaml
@@ -4,9 +4,56 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Course"
+        xmlns:oxy="http://oxyplot.org/wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="586" Width="910">
+    <Window.DataContext>
+        <local:MainViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="200"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <oxy:PlotView Grid.Column="0"  Model="{Binding MyModel}"/>
+        <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" 
+                      HorizontalAlignment="Center" Width="5"></GridSplitter>
+        <Grid Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
+            </Grid.RowDefinitions>
+            <StackPanel Grid.Row="0" VerticalAlignment="Center" >
+                <Border Margin="12,30,12,30" BorderThickness="1" BorderBrush="SteelBlue" 
+                    CornerRadius="4" MinWidth="200" >
+                    <DockPanel >
+                        <Label Content="&#966;(x):"></Label>
+                        <TextBox MinWidth="200"></TextBox>
+                    </DockPanel>
+                </Border>
+                <Border Margin="12,30,12,30" BorderThickness="1" BorderBrush="SteelBlue" 
+                    CornerRadius="4" MinWidth="200" >
+                    <DockPanel >
+                        <Label Content="&#968;(x):"></Label>
+                        <TextBox MinWidth="200"></TextBox>
+                    </DockPanel>
+                </Border>
+                <Border Margin="12,30,12,30" BorderThickness="1" BorderBrush="SteelBlue" 
+                    CornerRadius="4" MinWidth="200" >
+                    <DockPanel >
+                        <Label Content="f(x):"></Label>
+                        <TextBox MinWidth="200"></TextBox>
+                    </DockPanel>
+                </Border>
+            </StackPanel>
+            <Button Grid.Row="1" Content="Count" Margin="12" ></Button>
+        </Grid>
+        <!--<TextBlock Grid.Column="0" Text="sfdfsdf"></TextBlock>-->
+        <!--<TextBlock Grid.Column="1" Text="fvvfvfv"></TextBlock>-->
+
     </Grid>
 </Window>
