--- a/Course/MainWindow.xaml
+++ b/Course/MainWindow.xaml
@@ -79,6 +79,39 @@
                 </DataTrigger>
             </Style.Triggers>
         </Style>
+        <Style TargetType="Label" x:Key="ErrorPsiXStyle">
+            <Setter Property="Visibility" Value="Visible"/>
+            <Setter Property="Content" Value="{Binding ElementName=PsiX, Path=(Validation.Errors)[0].ErrorContent}"/>
+            <Setter Property="Foreground" Value="Red"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=PsiX, Path=(Validation.Errors)[0].ErrorContent}"
+                        Value="{x:Null}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Label" x:Key="ErrorFXStyle">
+            <Setter Property="Visibility" Value="Visible"/>
+            <Setter Property="Content" Value="{Binding ElementName=FX, Path=(Validation.Errors)[0].ErrorContent}"/>
+            <Setter Property="Foreground" Value="Red"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=FX, Path=(Validation.Errors)[0].ErrorContent}"
+                        Value="{x:Null}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="Label" x:Key="ErrorPTStyle">
+            <Setter Property="Visibility" Value="Visible"/>
+            <Setter Property="Content" Value="{Binding ElementName=PT, Path=(Validation.Errors)[0].ErrorContent}"/>
+            <Setter Property="Foreground" Value="Red"/>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=PT, Path=(Validation.Errors)[0].ErrorContent}"
+                        Value="{x:Null}">
+                    <Setter Property="Visibility" Value="Collapsed"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -98,7 +131,7 @@
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
             <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
-                <StackPanel Grid.Row="0" VerticalAlignment="Center" >
+                <StackPanel Grid.Row="0" VerticalAlignment="Stretch" >
                     <Border Margin="12,8" BorderThickness="1" BorderBrush="SteelBlue" 
                     CornerRadius="4" MinWidth="200" HorizontalAlignment="Left" >
                         <DockPanel Margin="2">
@@ -121,26 +154,50 @@
                     CornerRadius="4" MinWidth="200" HorizontalAlignment="Left">
                         <DockPanel Margin="2">
                             <Label Content="&#968;(x):"></Label>
-                            <TextBox Name="PsiX" MinWidth="200"></TextBox>
+                            <TextBox Name="PsiX" MinWidth="200">
+                                <Binding Source="{StaticResource InverseProblem1}"
+                                         Path="PsiInpit">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox>
                         </DockPanel>
                     </Border>
-                    <Label Content="ddddd" Margin="2" Foreground="Red"></Label>
+                    <Label Margin="2" Foreground="Red"
+                           Style="{StaticResource ErrorPsiXStyle}"></Label>
                     <Border Margin="12,8" BorderThickness="1" BorderBrush="SteelBlue" 
                     CornerRadius="4" MinWidth="200" HorizontalAlignment="Left" >
                         <DockPanel Margin="2">
                             <Label Content="f(x):"></Label>
-                            <TextBox Name="FX" MinWidth="200"></TextBox>
+                            <TextBox Name="FX" MinWidth="200">
+                                <Binding Source="{StaticResource InverseProblem1}"
+                                         Path="FInpit">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox>
                         </DockPanel>
                     </Border>
-                    <Label Content="ddddd" Margin="2" Foreground="Red"></Label>
+                    <Label Margin="2" Foreground="Red"
+                           Style="{StaticResource ErrorFXStyle}"></Label>
                     <Border Margin="12,8" BorderThickness="1" BorderBrush="SteelBlue" 
                     CornerRadius="4" MinWidth="200" HorizontalAlignment="Left" >
                         <DockPanel Margin="2">
                             <Label Content="U(x_0,t) = p(t):"></Label>
-                            <TextBox Name="PT" MinWidth="200"></TextBox>
+                            <TextBox Name="PT" MinWidth="200">
+                                <Binding Source="{StaticResource InverseProblem1}"
+                                         Path="PInpit">
+                                    <Binding.ValidationRules>
+                                        <DataErrorValidationRule />
+                                    </Binding.ValidationRules>
+                                </Binding>
+                            </TextBox>
                         </DockPanel>
                     </Border>
-                    <Label Content="ddddd" Margin="2" Foreground="Red"></Label>
+                    <Label Margin="2" Foreground="Red"
+                           Style="{StaticResource ErrorPTStyle}"></Label>
                     <Border Margin="12,8" BorderThickness="1" BorderBrush="SteelBlue" 
                     CornerRadius="4" MinWidth="40" HorizontalAlignment="Left">
                         <DockPanel Margin="2" >
